Use multi activity

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -12,4 +12,7 @@
     <string name="button9">按钮 9</string>
     <string name="button10">按钮 10</string>
     <string name="title">Android 练习</string>
+    <string name="welcome">你好!</string>
+    <string name="signup">注册</string>
+    <string name="login">登录</string>
 </resources>
