--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="button9">button 9</string>
     <string name="button10">button 10</string>
     <string name="title">Android Practice</string>
+    <string name="welcome">Hello!</string>
+    <string name="signup">Signup</string>
+    <string name="login">Login</string>
 </resources>
